SERVER-73134: Stop argument name shadow in interval_utils